# CrewAi-Agentic_Journal

./: .gitignore  README.md  agents.yaml  crew.py  main.py  pyproject.toml  requirements.txt  storage.db  tasks.yaml
config/: agents.yaml
knowledge/: user_preference.txt
src/: crew.py  main.py
src/config/: agents.yaml  agents1.yaml  tasks.yaml  tasks1.yaml
