[project]
name = "chalk"
version = "0.1.0"
description = "chalk using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
chalk = "chalk.main:run"
run_crew = "chalk.main:run"
train = "chalk.main:train"
replay = "chalk.main:replay"
test = "chalk.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
